Revision history for Perl extension App::Info.

0.53

0.52  2007-08-13T18:24:54
      - Fixed test failures on Win32 in 't/util.t.' Reported by Alex Chorny
        via the cpan-testers mail list.
      - Fixed test failure in 't/util.t' for those who happen to have an
        INTERCAL compiler installed. Reported by David Cantrell.

0.51  2006-09-25T17:52:53
      - Really fixed the unsorted test failure by putting the sort in the
        right place.
      - The code that creates the 't/scripts' directory now runs during the
        'code' action rather than the 'build' action, allowing the tests to
        run properly when the 'build' action has not been run. Reported By
        Alex Chorny (Ticket # 21281).
      - Fixed test failures under bleedperl where Carp was not properly
        loaded. Reported by Andreas Koenig (Ticket # 21641).
      - "OS-Dependent" skipped tests in 't/util.t' are no longer OS dependent
        or skipped.

0.50  2006-09-15T23:52:17
      - Fixed test failures due to lack of sorting of files and directories
        returned by files_in_dir() on some platforms.
      - Fixed documentation in App::Info::HTTPD::Apache so that a line of hash
        symbols (#s) doesn't show up in the docs. This actually created an
        error in man pages. Reported by Nacho Barrientos.

0.49  2006-04-08T05:35:31
      - Fixed typos in App::Info::HTTPD::Apache.
      - Changed keys for Apache executables such as apxs from, e.g., "apache
        apxs" to "path to apxs".
      - Added the value returned by Apache2::BuildConfig->new->{APXS_BINDIR},
        if Apache2::Build config is installed, to the list of bin directories
        returned by search_bin_dirs() in App::Info::HTTPD::Apache.
      - Added "httpd2" to the list of names returned by search_exe_names() in
        App::Info::HTTPD::Apache.
      - Fixed tests in t/apache_info.t to pass on Windows.

0.48  2006-02-05T03:09:38
      - Added support for Apache2 to App::Info::HTTPD::Apache.