@@ -35,12 +35,12 @@ my $class = Module::Build->subclass(
 );
 
 my $build = $class->new(
-    module_name    => 'App::Info',
-    license        => 'perl',
-    requires       => { File::Spec    => 0,
-                      },
-    build_requires => { Test::Simple  => '0.17',
-                      },
+    module_name        => 'App::Info',
+    license            => 'perl',
     create_makefile_pl => 'passthrough',
+    configure_requires => { 'Module::Build' => '0.2701' },
+    build_requires     => { 'Test::More'    => '0.17'   },
+    recommends         => { 'Test::Pod'     => '1.20'   },
+    requires           => { File::Spec    => 0          },
 );
 $build->create_build_script;
